gitignored a bunch of autoconf cruft

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-gtans
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache
+config.log
+config.status
+configure
+.deps
+depcomp
+missing
+install-sh
