--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,6 @@
-AC_INIT(src/gtans.cc)
+AC_INIT([gtans], [0.0], [mdgeorge@cs.cornell.edu])
+
+AC_CONFIG_SRCDIR([src/gtans.cc])
 
 AM_INIT_AUTOMAKE(gtans,0.1)
 AC_PROG_CXX
