Moved some cruft into config/

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,8 @@
 AC_INIT([gtans], [0.0], [mdgeorge@cs.cornell.edu])
 
 AC_CONFIG_SRCDIR([src/gtans.cc])
+AC_CONFIG_AUX_DIR([config])
+
 AM_INIT_AUTOMAKE(gtans,0.1)
 
 AC_PROG_CXX
