--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,9 +1,10 @@
 
 INCLUDES = $(gtkmm_CFLAGS) $(gtkglextmm_CFLAGS)
-LIBS     = $(gtkmm_LIBS)   $(gtkglextmm_LIBS)
+LIBS     = -g $(gtkmm_LIBS)   $(gtkglextmm_LIBS)
+CXXFLAGS = -g -Werror -Wall -pedantic
 
 bin_PROGRAMS = gtans2
 
-gtans2_SOURCES = gtans.cc
+gtans2_SOURCES = gtans.cc algebra.cc
 
 
