--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,8 +3,9 @@ INCLUDES = $(gtkmm_CFLAGS) $(gtkglextmm_CFLAGS)
 LIBS     = -g $(gtkmm_LIBS)   $(gtkglextmm_LIBS)
 CXXFLAGS = -g -Werror -Wall -pedantic
 
-bin_PROGRAMS = gtans2
+bin_PROGRAMS = gtans2 test
 
 gtans2_SOURCES = gtans.cc algebra.cc
+test_SOURCES = test.cc algebra.cc
 
 
