Got CGAL test working

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,7 +2,7 @@
 INCLUDES    = $(gtkmm_CFLAGS) $(gtkglextmm_CFLAGS) $(CGAL_CPPFLAGS)
 LIBS        = $(gtkmm_LIBS)   $(gtkglextmm_LIBS) $(CGAL_LIBS)
 LDFLAGS     = $(CGAL_LDFLAGS)
-AM_CXXFLAGS = -g -Werror -Wall -pedantic $(CGAL_CXXFLAGS)
+AM_CXXFLAGS = -g -Werror -Wall -pedantic $(CGAL_CXXFLAGS) -frounding-math
 
 bin_PROGRAMS = gtans2 test
 
