Added some texture generation example code.

--- a/prototype/animation/Makefile
+++ b/prototype/animation/Makefile
@@ -2,11 +2,12 @@
 # GLSL example
 #
 
-OGL_OBJECTS= ogl.o textfile.o
-ORGANIC_OBJECTS= organic.o textfile.o
+OGL_OBJECTS     = ogl.o textfile.o
+ORGANIC_OBJECTS = organic.o textfile.o
+TEXGEN_OBJECTS  = texgen.o
 LDFLAGS= -lGL -lGLEW -lglut
 
-all: ogl organic
+all: ogl organic 
 
 ogl: $(OGL_OBJECTS)
 	g++ $(OGL_OBJECTS) $(LDFLAGS) -o ogl
@@ -14,9 +15,12 @@ ogl: $(OGL_OBJECTS)
 organic: $(ORGANIC_OBJECTS)
 	g++ $(ORGANIC_OBJECTS) $(LDFLAGS) -o organic
 
+texgen: $(TEXGEN_OBJECTS)
+	g++ $(TEXGEN_OBJECTS) $(LDFLAGS) -o texgen
+
 textfile.o: textfile.h textfile.cpp
 
 clean:
-	rm -rf $(OGL_OBJECTS) $(ORGANIC_OBJECTS) ogl
+	rm -rf $(OGL_OBJECTS) $(ORGANIC_OBJECTS) $(TEXGEN_OBJECTS) ogl organic texgen
 
 .PHONY: clean
