Lots of reorganization.
Moved template params into common traits concept, with a default implementation in traits.h.  Implemented a bunch of controller.  Design is coming together.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,6 +7,6 @@ AM_CXXFLAGS = -g -Werror -Wall -pedantic $(CGAL_CXXFLAGS) -frounding-math
 bin_PROGRAMS = gtans2 test
 
 gtans2_SOURCES = gtans.cc algebra.cc
-test_SOURCES = test.cc algebra.cc
+test_SOURCES = test.cc controller.hcc controller.h algebra.cc
 
 
