Rebranding gtans2 -> tangy

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,9 +4,9 @@ LIBS        = $(gtkmm_LIBS)   $(gtkglextmm_LIBS) $(CGAL_LIBS)
 AM_LDFLAGS  = $(CGAL_LDFLAGS)
 AM_CXXFLAGS = -g -Werror -Wall -pedantic $(CGAL_CXXFLAGS) -frounding-math
 
-bin_PROGRAMS = gtans2 test
+bin_PROGRAMS = tangy-gtk test
 
-gtans2_SOURCES = gtans.cc algebra.cc
+tangy_gtk_SOURCES = tangy-gtk.cc algebra.cc
 test_SOURCES = test.cc controller.hcc controller.h algebra.cc
 
 
