Removed debug options - pass them as CXXFLAGS to ./configure

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,7 +2,7 @@
 INCLUDES    = $(gtkmm_CFLAGS) $(gtkglextmm_CFLAGS) $(CGAL_CPPFLAGS)
 LIBS        = $(gtkmm_LIBS)   $(gtkglextmm_LIBS) $(CGAL_LIBS)
 AM_LDFLAGS  = $(CGAL_LDFLAGS)
-AM_CXXFLAGS = -g -O0 -Werror -Wall -pedantic $(CGAL_CXXFLAGS) -frounding-math
+AM_CXXFLAGS = -Werror -Wall -pedantic $(CGAL_CXXFLAGS) -frounding-math
 
 bin_PROGRAMS = tangy-gtk test
 
