stopped building test for now.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,9 +4,8 @@ LIBS        = $(gtkmm_LIBS)   $(gtkglextmm_LIBS) $(CGAL_LIBS)
 AM_LDFLAGS  = $(CGAL_LDFLAGS)
 AM_CXXFLAGS = -Werror -Wall -pedantic $(CGAL_CXXFLAGS) -frounding-math
 
-bin_PROGRAMS = tangy-gtk test
+bin_PROGRAMS = tangy-gtk
 
 tangy_gtk_SOURCES = tangy-gtk.cc algebra.cc
 test_SOURCES = test.cc controller.hcc controller.h algebra.cc
-
 
