Fixed make distcheck.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,8 +4,15 @@ LIBS        = $(gtkmm_LIBS)   $(gtkglextmm_LIBS) $(CGAL_LIBS)
 AM_LDFLAGS  = $(CGAL_LDFLAGS)
 AM_CXXFLAGS = -Werror -Wall -pedantic $(CGAL_CXXFLAGS) -frounding-math
 
-bin_PROGRAMS = tangy-gtk test cgal-test
+bin_PROGRAMS = tangy-gtk
 
-tangy_gtk_SOURCES = tangy-gtk.cc algebra.cc
-test_SOURCES = test.cc controller.hcc controller.h algebra.cc
-cgal_test_SOURCES = cgal-test.cc algebra.cc
+tangy_gtk_SOURCES = algebra.cc algebra.h algebra.hcc    \
+                    controller.h controller.hcc         \
+                    geometry.h geometry.hcc             \
+                    render_opengl.h                     \
+                    tangy-gtk.cc                        \
+                    tans.h tans.hcc                     \
+                    tans_nocollide.h tans_nocollide.hcc \
+                    traits_nocollide.h                  \
+                    utils.h utils.hcc
+
