updated Makefile.am to reflect updated source

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,7 +9,7 @@ bin_PROGRAMS = tangy-gtk
 tangy_gtk_SOURCES = algebra.cc algebra.h algebra.hcc    \
                     controller.h controller.hcc         \
                     geometry.h geometry.hcc             \
-                    render_opengl.h                     \
+                    render_basic.h render_basic.hcc     \
                     tangy-gtk.cc                        \
                     tans.h tans.hcc                     \
                     tans_nocollide.h tans_nocollide.hcc \
