fixed glew.m4 to work the way I want.

--- a/configure.ac
+++ b/configure.ac
@@ -10,26 +10,51 @@ AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 
 dnl == checks ==================================================================
 
+#
 # checks for programs
+#
 
 AC_PROG_CXX
 AC_LANG([C++])
 
+#
 # checks for libraries
+#
 
-PKG_CHECK_MODULES(gtkmm, [gtkmm-2.4])
-AC_SUBST(gtkmm_CFLAGS)
-AC_SUBST(gtkmm_LIBS)
+# gtkmm
+PKG_CHECK_MODULES(gtkmm, [gtkmm-2.4], [
+	AC_SUBST(gtkmm_CFLAGS)
+	AC_SUBST(gtkmm_LIBS)
+],[
+	AC_MSG_ERROR("gtkmm is required")
+])
 
-PKG_CHECK_MODULES(gtkglextmm, [gtkglextmm-1.2])
-AC_SUBST(gtkglextmm_CFLAGS)
-AC_SUBST(gtkglextmm_LIBS)
+# gtkglextmm
+PKG_CHECK_MODULES(gtkglextmm, [gtkglextmm-1.2], [
+	AC_SUBST(gtkglextmm_CFLAGS)
+	AC_SUBST(gtkglextmm_LIBS)
+],[
+	AC_MSG_ERROR("gtkglextmm is required.")
+])
 
-ACX_CGAL()
-AC_SUBST(CGAL_CPPFLAGS)
-AC_SUBST(CGAL_CXXFLAGS)
-AC_SUBST(CGAL_LDFLAGS)
-AC_SUBST(CGAL_LIBS)
+# glew
+AX_CHECK_GLEW([
+	AC_SUBST(GLEW_CPPFLAGS)
+	AC_SUBST(GLEW_LDFLAGS)
+	AC_SUBST(GLEW_LIBS)
+],[
+	AC_MSG_ERROR("GLEW is required")
+])
+
+# cgal
+ACX_CGAL([
+	AC_SUBST(CGAL_CPPFLAGS)
+	AC_SUBST(CGAL_CXXFLAGS)
+	AC_SUBST(CGAL_LDFLAGS)
+	AC_SUBST(CGAL_LIBS)
+],[
+	AC_MSG_ERROR("CGAL is required")
+])
 
 # checks for header files
 # checks for functions
