added some boost dependencies.  Not sure if this is a bug in the CGAL automake stuff

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,21 +3,24 @@ AM_CPPFLAGS = \
 	$(gtkmm_CFLAGS)      \
 	$(gtkglextmm_CFLAGS) \
 	$(CGAL_CPPFLAGS)     \
+	$(BOOST_CPPFLAGS)    \
 	-DDATADIR="\"$(pkgdatadir)\""
 
 LIBS = \
 	$(gtkmm_LIBS)         \
 	$(gtkglextmm_LIBS)    \
 	$(CGAL_LIBS)          \
-	$(GLEW_LIBS)
+	$(GLEW_LIBS)          \
+	$(BOOST_SYSTEM_LIB)
 
 AM_LDFLAGS = \
-	$(CGAL_LDFLAGS) \
-	$(GLEW_LDFLAGS)
+	$(CGAL_LDFLAGS)     \
+	$(GLEW_LDFLAGS)     \
+	$(BOOST_LDFLAGS)
 
 AM_CXXFLAGS = \
-	-Werror -Wall -pedantic \
-	$(CGAL_CXXFLAGS)        \
+	-Werror -Wall     \
+	$(CGAL_CXXFLAGS)  \
 	-frounding-math
 
 bin_PROGRAMS = tangy-gtk
